# MuZap

./: .gitattributes  .gitignore  MuZap.bat  README.md  THIRD_PARTY_NOTICES.md  muzap.ini  strategies.ini
.github/workflows/: code_linter.yml  release.yml
docs/: LICENSE  README.md
lists/: list-exclude.txt  list-general.txt
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/muzap/: Cargo.toml  build.rs
rust/muzap/src/: diagnostics.rs  fixes.rs  fsutil.rs  hosts.rs  ipset.rs  main.rs  service.rs  settings.rs  strategies.rs  tools.rs  tui.rs  updates.rs
rust/muzap_core/: Cargo.toml
rust/muzap_core/src/: app.rs  config_files.rs  error.rs  ini.rs  launcher_prelude.rs  lib.rs  params.rs  paths.rs  print.rs  process.rs
rust/muzap_core/src/win/: elevation.rs
rust/muzap_hosts/: Cargo.toml  build.rs
rust/muzap_hosts/src/: main.rs
rust/muzap_service/: Cargo.toml  build.rs
rust/muzap_service/src/: main.rs
rust/muzap_tester/: Cargo.toml  build.rs
rust/muzap_tester/src/: analytics.rs  checker.rs  config.rs  dpi.rs  main.rs  report.rs  runner.rs  telemetry.rs  ui.rs
rust/muzap_updater/: Cargo.toml  build.rs
rust/muzap_updater/src/: main.rs
utils/: config_set.ps1  hosts_manage.ps1  targets.txt  telemetry.ps1  test_muzap.ps1  update.ps1
