[package]
name = "muzap"
description = "MuZap: менеджер (CLI/TUI) для управления службой, стратегиями, настройками, обновлениями и диагностикой"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MuZap contributors"]
build = "build.rs"

[package.metadata.winresource]
OriginalFilename = "MuZap.exe"
InternalName = "MuZap"
LegalCopyright = "MuZap"

[[bin]]
name = "MuZap"
path = "src/main.rs"

[dependencies]
muzap_core = { path = "../muzap_core" }
thiserror = "2.0"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.28"
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sysinfo = "0.38"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Registry",
  "Win32_System_Services",
  "Win32_System_Threading"
] }

[build-dependencies]
winresource = "0.1"