[package]
name = "muzap_core"
description = "MuZap: общее ядро (пути, INI, подстановка параметров, вывод, Windows-хелперы)"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MuZap contributors"]

[features]
launcher = []

[dependencies]
thiserror = "2.0"
crossterm = "0.28"
sysinfo = "0.38"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
] }
