[package]
name = "muzap_hosts"
description = "MuZap: управление блоком в hosts (обновить/удалить)"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MuZap contributors"]
build = "build.rs"

[[bin]]
name = "muzap_hosts"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
thiserror = "2.0"
encoding_rs = "0.8"
sysinfo = "0.38"

windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem"
] }

[build-dependencies]
winresource = "0.1"