[package]
name = "muzap_service"
description = "MuZap: Windows-служба (SCM). Запускает winws.exe как дочерний процесс по выбранной стратегии."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MuZap contributors"]
build = "build.rs"

[package.metadata.winresource]
OriginalFilename = "muzap_service.exe"
InternalName = "MuZap Service"

[[bin]]
name = "muzap_service"
path = "src/main.rs"

[dependencies]
muzap_core = { path = "../muzap_core" }
thiserror = "2.0"
sysinfo = "0.38"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading"
] }

[build-dependencies]
winresource = "0.1"