[package]
name = "muzap_updater"
description = "MuZap: проверка обновлений на GitHub, скачивание, проверка SHA-256, установка"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MuZap contributors"]
build = "build.rs"

[package.metadata.winresource]
OriginalFilename = "muzap_update.exe"
InternalName = "MuZap Update"
LegalCopyright = "MuZap"

[[bin]]
name = "muzap_update"
path = "src/main.rs"

[dependencies]
muzap_core = { path = "../muzap_core" }

reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
semver = "1.0"
indicatif = "0.17"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
zip = "8"
sysinfo = "0.38"
thiserror = "2.0"
crossterm = "0.28"

[build-dependencies]
winresource = "0.1"
